# vinis-fotolog

./: .gitignore  README.md  main.py  models.py  pyproject.toml
backend/: .pre-commit-config.yaml  Makefile  pyproject.toml
backend/fotolog/controllers/: login.py
backend/scripts/: create_user.py  init_db.py
backend/src/: config.py  db.py  main.py
backend/src/controllers/: login.py  post.py
backend/src/models/: models.py
backend/src/models/api_models/: pagination.py  post.py
backend/src/tests/: conftest.py  test_db.py  test_image_metadata.py  test_login.py
backend/src/utils/: image.py
backend/templates/: base.html  edit_comment.html  index.html  login.html
fotolog/: main.py
fotolog/models/: models.py
frontend/: package-lock.json
templates/: admin.html
