[tool.poetry]
name = "vinis-fotolog"
version = "0.1.0"
description = ""
authors = ["Vinicius <soares7vinicius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
jinja2 = "^3.1.6"
aiofiles = "^24.1.0"
sqlalchemy = "^2.0.41"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
