[tool.poetry]
name = "vinis-fotolog"
version = "0.1.0"
description = ""
authors = ["Vinicius <soares7vinicius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
jinja2 = "^3.1.6"
aiofiles = "^24.1.0"
sqlalchemy = "^2.0.41"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
sqlmodel = "^0.0.24"
rawpy = "^0.25.0"
imageio = "^2.37.0"
passlib = "^1.7.4"
bcrypt = "<4.0.0"
httpx = "^0.28.1"
pytest = "^8.4.0"
pillow-heif = "^0.22.0"
exifread = "^3.3.1"
exiv2 = "^0.17.3"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
